# QKD-Final

./: README.md  app.py  bb84_simulator.py  database.py  firebase_config.py  firebase_credentials.json  init_database.py  init_db.py  lab_simulator.py  models.py  package-lock.json  package.json  proofs.md  pyproject.toml  qrng_keys.json  quantum_device.py  replit.md  requirements.txt  routes.py  run.py  tailwind.config.js
config/: __init__.py  ibm_quantum_token.txt.template  setup.py
instance/: quantum_lab.db
static/: app-fixed.js  app.js  lab.css  lab.js  style.css  tailwind-input.css  tailwind-production.css  ui-fix.js  visualization.js
templates/: header.html  index.html  lab.html  mobile.html  simulator.html  testbed.html
