[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-runtime>=0.41.1",
    "firebase-admin>=7.1.0",
    "google-cloud-firestore>=2.21.0",
    "qiskit>=2.1.2",
    "matplotlib>=3.10.6",
    "pillow>=11.3.0",
    "qrcode>=8.2",
    "pylatexenc>=2.10",
]
